# Magisterka

./: instrukcja_gazebo_ros.txt  instrukcja_plugin.txt
gazebo_ros/: file.txt
gazebo_ros/src/robot_description/: CMakeLists.txt  package.xml
gazebo_ros/src/robot_description/urdf/: robot.urdf
gazebo_ros/src/robot_gazebo/: CMakeLists.txt  package.xml
gazebo_ros/src/robot_gazebo/launch/: robot.launch
gazebo_ros/src/robot_gazebo/src/: Point_cloud.cpp  read.cpp
gazebo_ros/src/robot_gazebo/worlds/: robot.world
position_plugin/: CMakeLists.txt  Init.cpp  Init.hpp  dzialanie_grupowe.cpp  dzialanie_grupowe.hpp  f_alpha.cpp  f_alpha.hpp  file.txt  kinematyka.cpp  kinematyka.hpp  liczenie_H.cpp  liczenie_H.hpp  liczenie_R.cpp  liczenie_R.hpp  liczenie_u.cpp  liczenie_u.hpp  liczenie_u_punkt.cpp  liczenie_u_punkt.hpp  odwrotnosc_g.cpp  odwrotnosc_g.hpp  okregi_przeszkody.txt  omijanie_przeszkod.cpp  omijanie_przeszkod.hpp  pomiary.txt  przeszkody.txt  punkty.txt
